# SolarEngine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  SE.CSharp.sln
Src/: CMakeLists.txt  SG.natvis
Src/Applications/: CMakeLists.txt
Src/Applications/Win32Editor/: CMakeLists.txt  EditorApplication_Win32.cpp  EditorApplication_Win32.h  Resource.rc  main.cpp
Src/Applications/Win32EditorApp/: CMakeLists.txt  EditorApplication_Win32.cpp  EditorApplication_Win32.h  Resource.h  main.cpp
Src/BuildTool/Code/: CMakeLists.txt  Reflector.cpp  Reflector.h  ReflectorSettingsAndUtils.cpp  ReflectorSettingsAndUtils.h  TopologicalSort.h  precompile.cmake
Src/BuildTool/Code/Clang/: ClangParser.cpp  ClangParser.h  ClangParserContext.cpp  ClangParserContext.h  ClangUtils.cpp  ClangUtils.h  ClangVisitors_Enum.cpp  ClangVisitors_Enum.h  ClangVisitors_Macro.cpp  ClangVisitors_Macro.h  ClangVisitors_Structure.cpp  ClangVisitors_Structure.h  ClangVisitors_TranslationUnit.cpp  ClangVisitors_TranslationUnit.h
Src/BuildTool/Code/CodeGenerators/: CodeGenerator_BindingsCSharp.cpp  CodeGenerator_BindingsCSharp.h  CodeGenerator_BindingsCpp.cpp  CodeGenerator_BindingsCpp.h  CodeGenerator_BindingsDataTypes.h  CodeGenerator_BindingsModel.cpp  CodeGenerator_BindingsModel.h  CodeGenerator_BindingsNativeStubs.cpp  CodeGenerator_BindingsNativeStubs.h  CodeGenerator_BindingsTypeMap.cpp  CodeGenerator_BindingsTypeMap.h  CodeGenerator_CPP.cpp  CodeGenerator_CPP.h  CodeGenerator_CPP_Enum.cpp  CodeGenerator_CPP_Enum.h  CodeGenerator_CPP_Meta.cpp  CodeGenerator_CPP_Meta.h  CodeGenerator_CPP_Type.cpp  CodeGenerator_CPP_Type.h  CodeGenerator_Utils.cpp  CodeGenerator_Utils.h
Src/BuildTool/Code/Core/: Dictionary.h  FileSystem.h  Json.h  String.h  StringID.h  Time.h  TopologicalSort.cpp  TopologicalSort.h  Utils.cpp  Utils.h
Src/BuildTool/Code/Database/: DataTypes.cpp  DataTypes.h  ReflectionDatabase.cpp  ReflectionDatabase.h  ReflectionProjectTypes.h
Src/BuildTool/Code/Template/: CodeCppClassTemplate.mustache  CodeCppEnumTemplate.mustache  CodeCppMetaTemplate.mustache  CodeModuleTemplate.mustache  CodeTypeRegistrationTemplate.mustache
Src/Engine/Assets/Config/: SolarEngine.ini
Src/Engine/Assets/Fonts/: fontDataMaterialDesign.txt
Src/Engine/Assets/Models/: Sphere.fbx  plane.fbx
Src/Engine/Core/: API.h  CMakeLists.txt  Compiler.h  CoreModule.cpp  CoreModule.h  Systems.cpp  Systems.h  Templates.h
Src/Engine/Core/Input/: CMakeLists.txt  Enums.h  Gamepad.cpp  Gamepad.h  Input.cpp  Input.h  InputDevice.h  Keyboard.h  Mouse.h  VirtualInput.h
Src/Engine/Core/Logging/: CMakeLists.txt  Exception.h  Logging.h  LoggingSystem.cpp  LoggingSystem.h
Src/Engine/Core/Math/: AABBTree.cpp  AABBTree.h  BoundingVolumes.cpp  BoundingVolumes.h  CMakeLists.txt  CollisionsHelper.h  Color.cpp  Color.h  FloatCurve.cpp  FloatCurve.h  Half.cpp  Half.h  Line.cpp  Line.h  Math.h  Matrix.cpp  Matrix.h  Matrix3x3.cpp  Matrix3x3.h  NumericRange.cpp  NumericRange.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Rectangle.cpp  Rectangle.h  SIMD.h  Transform.cpp  Transform.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  VectorSIMD.cpp  VectorSIMD.h
Src/Engine/Core/Memory/: Allocation.h  CMakeLists.txt  Memory.h  STLAllocator.h
Src/Engine/Core/Platform/: CMakeLists.txt  CPUInfo.h  Clipboard.h  CreateProcessSettings.h  CreateWindowSettings.h  Defines.h  FileSystemWatcher.h  IGuiData.h  MemoryStats.h  MessageBox.h  StringUtils.h  User.h  WindowsManager.h
Src/Engine/Core/Profiler/: CMakeLists.txt  ProfilerCPU.cpp  ProfilerCPU.h  ProfilerGPU.cpp  ProfilerGPU.h  ProfilerSrcLoc.h  RenderStats.h
Src/Engine/Core/Serialization/: CMakeLists.txt  FileReadStream.cpp  FileReadStream.h  FileWriteStream.cpp  FileWriteStream.h  ISerializable.h  ISerializeModifier.h  Json.h  JsonTools.cpp  JsonTools.h  JsonWriter.cpp  JsonWriter.h  JsonWriters.hpp  MemoryReadStream.h  MemoryWriteStream.cpp  MemoryWriteStream.h  ReadStream.h  Serialization.cpp  Serialization.h  Stream.cpp  Stream.h  TextWriter.h  TypeSerialization.cpp  TypeSerialization.h  WriteStream.h
Src/Engine/Core/Thread/: CMakeLists.txt  ConcurrentTaskQueue.h  IRunnable.h  JobSystem.h  Task.cpp  Task.h  TaskGraph.cpp  TaskGraph.h  ThreadLocal.h  ThreadPool.h  ThreadRegistry.cpp  ThreadRegistry.h  Threading.cpp  Threading.h
Src/Engine/Core/TypeSystem/: CMakeLists.txt  CoreTypeConversions.cpp  CoreTypeConversions.h  CoreTypes.cpp  CoreTypes.h  DefaultTypeInfos.h  IType.cpp  IType.h  TypeDescriptors.cpp  TypeDescriptors.h  TypeID.h  Types.cpp  (+1 more)
Src/Engine/Editor/: API.cpp  API.h  CMakeLists.txt  EditorApp.cpp  EditorApp.h  EditorAssets.cpp  EditorAssets.h  EditorCSharp.csproj  EditorContext.cpp  EditorContext.h  EditorIcons.h  EditorUI.cpp  EditorUI.h  ManagedEditor.cpp  ManagedEditor.cs  ManagedEditor.h  Test.cpp  Test.h
Src/Engine/Runtime/: API.cpp  API.h  App.h  CMakeLists.txt  Engine.cpp  Engine.h  EngineContext.cpp  EngineContext.h  RuntimeCSharp.csproj  ShaderReflection.cpp  ShaderReflection.h
Src/Engine/Shaders/: BRDF.hlsl  Common.hlsl  Default.shader  Forward.shader  GBuffer.hlsl  GBuffer.shader  GBufferCommon.hlsl  GUI.shader  GUICommon.hlsl  GUIOld.shader  Gizmos.shader  Lighting.hlsl  LightingCommon.hlsl  Lights.shader  MaterialCommon.hlsl  Math.hlsl  PCFKernels.hlsl  Quad.shader  QuadCommon.hlsl  Random.hlsl  Shadows.shader  ShadowsCommon.hlsl  ShadowsSampling.hlsl  Sky.shader  Test.shader
Src/Libraries/: CMakeLists.txt
Src/Libraries/GameNetworkingSockets/: CONTROL  link.cmake
Src/Libraries/ISPCTextureCompressor/: link.cmake
Src/Libraries/LLVM15/: Version.txt
Src/Libraries/NetHost/: link.cmake
Src/Libraries/ShaderCompiler/: CMakeLists.txt
Src/Libraries/fmt/: ChangeLog.rst  README.rst  run-msbuild.bat
Src/Libraries/slang/: link.cmake
Src/Libraries/sqlite3/: CMakeLists.txt
Src/Reflector/Code/: CMakeLists.txt  Reflector.cpp  Reflector.h  ReflectorSettingsAndUtils.cpp  ReflectorSettingsAndUtils.h  TopologicalSort.cpp  precompile.cmake
Src/Reflector/Precompile/: precompilefile.json
(+1983 files in other folders)
